istiofiles/virtual-service-darklaunch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ola
spec:
  hosts:
  - ola
  http:
  - route:
    - destination:
        host: ola
        subset: version-v1
    mirror:
      host: ola
      subset: version-v2
---
