istiofiles/virtual-service-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ola
spec:
  hosts:
  - ola
  http:
  - fault:
      delay:
        fixedDelay: 7.000s
        percent: 50
    route:
    - destination:
        host: ola
        subset: version-v2
---
