istiofiles/virtual-service-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ola
spec:
  hosts:
  - ola
  http:
  - match:
    - headers:
        test:
          regex: .*Rafael.*
    route:
    - destination:
        host: ola
        subset: version-v2
  - route:
    - destination:
        host: ola
        subset: version-v1
---
